--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -2,8 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7491cc23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e3e2281c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +67,12 @@
    "id": "2b0525ab",
    "metadata": {},
    "source": [
-    "# Task 2 - Transcribe into RNA"
+    "# Task 2 - Transcribing into RNA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b4809e88",
    "metadata": {},
    "outputs": [
@@ -65,7 +85,7 @@
     }
    ],
    "source": [
-    "seq = utils.readFromFile(\"problems/rosalind_rna.txt\")\n",
+    "seq = utils.readFile(\"problems/rosalind_rna.txt\")\n",
     "seq = seq.replace('T', 'U')\n",
     "\n",
     "print(seq)"
@@ -92,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c1ab0095",
    "metadata": {},
    "outputs": [
@@ -107,10 +127,75 @@
    "source": [
     "complementTable = str.maketrans(\"ACGT\", \"TGCA\")\n",
     "\n",
-    "seq = utils.readFromFile(\"problems/rosalind_revc.txt\")\n",
+    "seq = utils.readFile(\"problems/rosalind_revc.txt\")\n",
     "seq = seq.translate(complementTable)[::-1]\n",
     "\n",
     "print(seq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb8041ff",
+   "metadata": {},
+   "source": [
+    "# Task 4 - GC Content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9cbc2d7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sequence import Sequence\n",
+    "\n",
+    "seq = Sequence(utils.randomSeq())\n",
+    "gcCount = seq.count('G') + seq.count('C')\n",
+    "content = gcCount / len(seq)\n",
+    "\n",
+    "print(f\"{content * 100}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "351ffa75",
+   "metadata": {},
+   "source": [
+    "## Rosalind Problem\n",
+    "using FASTA format as input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "59e128a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rosalind_0469\n",
+      "55.056\n"
+     ]
+    }
+   ],
+   "source": [
+    "seqs = utils.readFasta(\"problems/rosalind_gc.txt\")\n",
+    "seqs = {key: (s.count('G') + s.count('C')) / len(s) * 100 for key, s in seqs.items()}\n",
+    "maxGC = max(seqs, key=seqs.get)\n",
+    "\n",
+    "print(maxGC)\n",
+    "print(round(seqs[maxGC], 3))"
    ]
   }
  ],
