revamp sequence.py

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9cbc2d7a",
    "metadata": {},
    "outputs": [
@@ -147,9 +147,9 @@
     }
    ],
    "source": [
-    "from sequence import Sequence\n",
+    "from sequence import DNASeq\n",
     "\n",
-    "seq = Sequence(utils.randomSeq())\n",
+    "seq = DNASeq(utils.randomSeq())\n",
     "gcCount = seq.count('G') + seq.count('C')\n",
     "content = gcCount / len(seq)\n",
     "\n",
