--- a/learn/chapter1.ipynb
+++ b/learn/chapter1.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e3e2281c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils"
+    "from __init__ import *"
    ]
   },
   {
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "seq = utils.readFile(\"problems/rosalind_rna.txt\")\n",
+    "seq = readFile(\"problems/rosalind_rna.txt\")\n",
     "seq = seq.replace('T', 'U')\n",
     "\n",
     "print(seq)"
@@ -118,7 +118,7 @@
    "source": [
     "complementTable = str.maketrans(\"ACGT\", \"TGCA\")\n",
     "\n",
-    "seq = utils.readFile(\"problems/rosalind_revc.txt\")\n",
+    "seq = readFile(\"problems/rosalind_revc.txt\")\n",
     "seq = seq.translate(complementTable)[::-1]\n",
     "\n",
     "print(seq)"
@@ -147,9 +147,7 @@
     }
    ],
    "source": [
-    "from sequence import DNASeq\n",
-    "\n",
-    "seq = DNASeq(utils.randomSeq())\n",
+    "seq = DNASeq(randomSeq())\n",
     "gcCount = seq.count('G') + seq.count('C')\n",
     "content = gcCount / len(seq)\n",
     "\n",
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "59e128a5",
    "metadata": {},
    "outputs": [
@@ -181,7 +179,7 @@
     }
    ],
    "source": [
-    "seqs = utils.readFasta(\"problems/rosalind_gc.txt\")\n",
+    "seqs = readFasta(\"problems/rosalind_gc.txt\")\n",
     "seqs = {key: (s.count('G') + s.count('C')) / len(s) * 100 for key, s in seqs.items()}\n",
     "maxGC = max(seqs, key=seqs.get)\n",
     "\n",
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1f2fbd00",
    "metadata": {},
    "outputs": [
@@ -221,9 +219,7 @@
     }
    ],
    "source": [
-    "from sequence import dnaCondons\n",
-    "\n",
-    "seq = utils.randomSeq()\n",
+    "seq = randomSeq()\n",
     "\n",
     "pseq = ''\n",
     "for i in range(0, len(seq) // 3):\n",
