--- a/pkg/learn/chapter1.ipynb
+++ b/pkg/learn/chapter1.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __init__ import *"
+    "from ..common import *"
    ]
   },
   {
